--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -24,7 +24,7 @@
    
     <StackLayout class="input-field">
 		<Label class="boxlabel" text="Customer Code" textWrap="true"></Label>
-        <RadAutoCompleteTextView  #autocomplete style="font-size:20" [items]="autocompleteCustomer" (didAutoComplete)="onCustomerDidAutoComplete($event)" (tokenAdded)="onCustomerSelected($event)" hint="Enter Customer Code" (textChanged)="fillCustomers()" suggestMode="Suggest" displayMode="Plain" >
+        <RadAutoCompleteTextView [readOnly]="custCodeEnabled"  #autocomplete style="font-size:20" [items]="autocompleteCustomer" (didAutoComplete)="onCustomerDidAutoComplete($event)" (tokenAdded)="onCustomerSelected($event)" hint="Enter Customer Code" (textChanged)="fillCustomers()" suggestMode="Suggest" displayMode="Plain" >
 			<SuggestionView tkAutoCompleteSuggestionView>
 				<ng-template tkSuggestionItemTemplate let-item="item">
 					<GridLayout columns="auto, *">
@@ -51,21 +51,18 @@
 
 
      <Label class="boxlabel" text="Customer Purchase Order" textWrap="true"></Label>
-        <TextField class="input input-border" hint="Customer Purchase Order" [(ngModel)]="CustomerPurchaseOrder" editable="true" ></TextField>
+        <TextField class="input input-border" id="CustPO" hint="Customer Purchase Order" [(ngModel)]="CustomerPurchaseOrder" editable="true" ></TextField>
 
 
        <!-- <Label class="boxlabel" text="Warehouse Code" textWrap="true"></Label>
         <TextField class="input input-border" hint="Warehouse Code" [(ngModel)]="WarehouseCode" editable="true" ></TextField> -->
 
 
-        <Button  class="btn btn-primary btn-purple btn-active" [isEnabled]="orderLinesEnabled"    text="Show Order Lines" (tap)="showOrderLines()"></Button>
-
-        <Button  class="btn btn-primary btn-sky btn-active"  [isEnabled]="deliveryAddressEnabled"   text="View Delivery Address" (tap)="showDeliveryAddress()"></Button>
-      
-        <Button  class="btn btn-primary btn-sky btn-active"  [isEnabled]="AddChargesEnabled"   text="Change Additional Charges" (tap)="showAddCharges()"></Button>
-
-        <Button   colSpan="2" class="btn btn-primary btn-forest btn-active" [isEnabled]="summaryEnabled"       text="Show Order Summary " (tap)="showOrderSummary()"></Button>
-
+        <Button  class="btn btn-primary btn-purple btn-active" [isEnabled]="orderLinesEnabled" text="Show Order Lines" (tap)="showOrderLines()"></Button>
+        <Button  class="btn btn-primary btn-sky btn-active"  [isEnabled]="deliveryAddressEnabled" text="View Delivery Address" (tap)="showDeliveryAddress()"></Button>
+        <Button  class="btn btn-primary btn-sky btn-active"  [isEnabled]="AddChargesEnabled" text="Change Additional Charges" (tap)="showAddCharges()"></Button>
+        <Button   colSpan="2" class="btn btn-primary btn-forest btn-active" [isEnabled]="summaryEnabled" text="Show Order Summary " (tap)="showOrderSummary()"></Button>
+        <Button   colSpan="2" class="btn btn-primary btn-forest btn-active" [isEnabled]="clearEnabled" text="Clear Order Details" (tap)="clearOrderDetails()"></Button>
 
     </StackLayout>
     <ScrollView (scroll)="onScroll($event)" [style.visibility]="ItemVisbilty"  [scrollY] ="scrollYPos" height = "4000px" > // ITEM START
@@ -119,6 +116,7 @@
         (opened)="onopen()"
         (closed)="onclose()"
         hint = "Select Colour"
+        [isEnabled]="Att1Enabled"
         row="1" col = "0"
         ></DropDown>
 
@@ -134,6 +132,7 @@
         (opened)="onopen()"
         (closed)="onclose()"
         hint = "Select Size"
+        [isEnabled]="Att1Enabled"
         row="1" col = "1"
         ></DropDown>
 
