--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -17,14 +17,15 @@
 
 <StackLayout class="form" sdkExampleTitle sdkToggleNavButton>
     <StackLayout class="page page-content">
-    <StackLayout [style.visibility]="OrderVisbilty" class=" form window m-t-9 m-b-5">
+        <ScrollView (scroll)="onScroll($event)" [style.visibility]="OrderVisbilty"  [scrollY] ="scrollYPos" height = "4000px" > // order START
+    <StackLayout >
 
         <!--<Label class="boxlabel" text="Customer Code" textWrap="true"></Label>-->
     <!--    <TextField class="input input-border m-t-9 m-b-5" hint="Customer Code" [(ngModel)]="CustomerCode" editable="true" ></TextField> -->
    
     <StackLayout class="input-field">
 		<Label class="boxlabel" text="Customer Code" textWrap="true"></Label>
-        <RadAutoCompleteTextView [readOnly]="custCodeEnabled"  #autocomplete style="font-size:20" [items]="autocompleteCustomer" (didAutoComplete)="onCustomerDidAutoComplete($event)" (tokenAdded)="onCustomerSelected($event)" hint="Enter Customer Code" (textChanged)="fillCustomers()" suggestMode="Suggest" displayMode="Plain" >
+        <RadAutoCompleteTextView [readOnly]="custCodeEnabled" id="autocomp"  #autocomplete style="font-size:20" [items]="autocompleteCustomer" (didAutoComplete)="onCustomerDidAutoComplete($event)" (tokenAdded)="onCustomerSelected($event)" hint="Enter Customer Code" (textChanged)="fillCustomers()" suggestMode="Suggest" displayMode="Plain" >
 			<SuggestionView tkAutoCompleteSuggestionView>
 				<ng-template tkSuggestionItemTemplate let-item="item">
 					<GridLayout columns="auto, *">
@@ -51,7 +52,7 @@
 
 
      <Label class="boxlabel" text="Customer Purchase Order" textWrap="true"></Label>
-        <TextField class="input input-border" id="CustPO" hint="Customer Purchase Order" [(ngModel)]="CustomerPurchaseOrder" editable="true" ></TextField>
+        <TextField class="input input-border" id="CustPO" hint="Customer Purchase Order" [(ngModel)]="CustomerPurchaseOrder" [editable]="custCodeEnabled" ></TextField>
 
 
        <!-- <Label class="boxlabel" text="Warehouse Code" textWrap="true"></Label>
@@ -65,6 +66,7 @@
         <Button   colSpan="2" class="btn btn-primary btn-forest btn-active" [isEnabled]="clearEnabled" text="Clear Order Details" (tap)="clearOrderDetails()"></Button>
 
     </StackLayout>
+        </ScrollView>
     <ScrollView (scroll)="onScroll($event)" [style.visibility]="ItemVisbilty"  [scrollY] ="scrollYPos" height = "4000px" > // ITEM START
     <StackLayout > 
         <StackLayout  class=" form window m-t-9 m-b-5">
@@ -76,7 +78,7 @@
    
       <StackLayout class="input-field">
 		<Label class="boxlabel" text="Item Code" textWrap="true"></Label>
-        <RadAutoCompleteTextView #autoItemcomplete style="font-size:20" [items]="autocompleteItem" (didAutoComplete)="onItemDidAutoComplete($event)" (tokenAdded)="onItemSelected($event)" hint="Enter Item Code" (textChanged)="fillItems()" suggestMode="Suggest" displayMode="Plain" >
+        <RadAutoCompleteTextView #autoItemcomplete [readOnly]="itemCodeEnabled" style="font-size:20" [items]="autocompleteItem" (didAutoComplete)="onItemDidAutoComplete($event)" (tokenAdded)="onItemSelected($event)" hint="Enter Item Code" (textChanged)="fillItems()" suggestMode="Suggest" displayMode="Plain" >
 			<SuggestionView tkAutoCompleteSuggestionView>
 				<ng-template tkSuggestionItemTemplate let-item="item">
 					<GridLayout columns="auto, *">
@@ -227,7 +229,7 @@
                         <TextField  [index]= "item.iIndex" style="margin: 5;"  row="1" col="0" [text]="item.AddChargeCode" editable="false" ></TextField>
 
                            <Label row="0" col="1" style="margin: 2;font-weight: bold;" text="Charge Value"></Label>
-                            <TextField  [index]= "item.iIndex" style="margin: 5;"  row="1" col="1" [text]="item.AddChargeValue" editable="true" keyboardType ="number" (returnPress)="onReturnPressChargeValue"></TextField>
+                            <TextField id="addchargecodevalue"  [index]= "item.iIndex" style="margin: 5;"  row="1" col="1" [text]="item.AddChargeValue" editable="true" keyboardType ="number" (returnPress)="onReturnPressChargeValue(item.AddChargeCode)"></TextField>
 
                             <Label row="0" col="2" style="margin: 2;font-weight: bold;" text="Charge Desc"></Label>
                             <TextField  [index]= "item.iIndex" style="margin: 5;"  row="1" col="2" [text]="item.AddChargeDesc" editable="false" ></TextField>
