--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -21,7 +21,7 @@
     (selectedIndexChanged)="onWarehouseCodeChange($event)"
     (opened)="onWarehouseOpen()"
     (closed)="onclose()"
-    hint = "Select Warehouse Code"
+    hint = "Warehouse Code (Optional)"
  
     ></DropDown>        
 
@@ -43,16 +43,16 @@
 
                 <GridLayout  columns="110,*,*,*" rows="*,*,*,*" style="width: 100%">
                     <Label row="0" col="0" style="margin: 2;font-weight: bold;text-align: center;" text="Storage"></Label>
-                     <Label  (tap)="onTap($event)" [index]= "item.iIndex"  style="color: white;background-color: rgb(19, 88, 5); margin: 5;" row="1" col="0" [text]="item.Storage"></Label>
+                     <Label  (tap)="onTap($event)" [index]= "item.iIndex"  style="text-align: center;color: white;background-color: rgb(19, 88, 5); margin: 5;" row="1" col="0" [text]="item.Storage"></Label>
 
                          <Label row="0" col="1" style="margin: 2;font-weight: bold;text-align: center;" text="On Hand"></Label>
-                         <Label (tap)="onTap($event)" [index]= "item.iIndex" style="color: white;background-color: rgb(16, 28, 136); margin: 5;" row="1" col="1" [text]="item.QuantityOnHand"></Label>
+                         <Label (tap)="onTap($event)" [index]= "item.iIndex" style="text-align: center;color: white;background-color: rgb(16, 28, 136); margin: 5;" row="1" col="1" [text]="item.QuantityOnHand"></Label>
 
                          <Label row="0" col="2" style="margin: 2;font-weight: bold;text-align: center;" text="On PPS"></Label>
-                         <Label (tap)="onTap($event)" [index]= "item.iIndex" style="color: white;background-color: #e00505; margin: 5;" row="1" col="2" [text]="item.QuantityOnPps"></Label>
+                         <Label (tap)="onTap($event)" [index]= "item.iIndex" style="text-align: center;color: white;background-color: #e00505; margin: 5;" row="1" col="2" [text]="item.QuantityOnPps"></Label>
                          
                          <Label row="0" col="3" style="margin: 2;font-weight: bold;text-align: center;" text="On Alloc"></Label>
-                         <Label (tap)="onTap($event)"  [index]= "item.iIndex" style="color: white;background-color: #a74107; margin: 5;" row="1" col="3" [text]="item.QuantityAlloc"></Label>
+                         <Label (tap)="onTap($event)"  [index]= "item.iIndex" style="text-align: center;color: white;background-color: #a74107; margin: 5;" row="1" col="3" [text]="item.QuantityAlloc"></Label>
 
                      </GridLayout>
                </ng-template>
@@ -70,16 +70,16 @@
                 <ng-template   let-item="item">
                    <GridLayout  columns="100,*,*,*" rows="*,*,*,*" style="width: 100%">
                        <Label row="0" col="0" style="margin: 4;font-weight: bold;text-align: center;" text="Warehouse"></Label>
-                        <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"    style="color: white;background-color: rgb(19, 88, 5); margin: 5;" row="1" col="0" [text]="item.WarehouseCode"></Label>
+                        <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"    style="text-align: center;color: white;background-color: rgb(19, 88, 5); margin: 5;" row="1" col="0" [text]="item.WarehouseCode"></Label>
    
                             <Label row="0" col="1" style="margin: 2;font-weight: bold;text-align: center;" text="On Hand"></Label>
-                            <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"  style="color: white;background-color: rgb(16, 28, 136); margin: 5;" row="1" col="1" [text]="item.cQuantityOnHand"></Label>
+                            <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"  style="text-align: center;color: white;background-color: rgb(16, 28, 136); margin: 5;" row="1" col="1" [text]="item.cQuantityOnHand"></Label>
    
                             <Label row="0" col="2" style="margin: 2;font-weight: bold;text-align: center;" text="On PPS"></Label>
-                            <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"   style="color: white;background-color: #e00505; margin: 5;" row="1" col="2" [text]="item.cQuantityOnPps"></Label>
+                            <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"   style="text-align: center;color: white;background-color: #e00505; margin: 5;" row="1" col="2" [text]="item.cQuantityOnPps"></Label>
                             
                             <Label row="0" col="3" style="margin: 2;font-weight: bold;text-align: center;" text="On Alloc"></Label>
-                            <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"  style="color: white;background-color: #a74107; margin: 5;" row="1" col="3" [text]="item.cQuantityAlloc"></Label>
+                            <Label (tap)="onItemStockTap($event)" [index]= "item.iIndex"  style="text-align: center;color: white;background-color: #a74107; margin: 5;" row="1" col="3" [text]="item.cQuantityAlloc"></Label>
    
    
    
